authul_macros/tests/errors/table/invalid_attr_name.rs
#[authul_macros::authul_table(blargh)]
struct Foo;

fn main() {
}
